--- a/site/style.css
+++ b/site/style.css
@@ -1,28 +1,21 @@
-body{
-	background-color: #F1F1F1;
+body{ background-color: #FFFFFF;}
+
+#logo {border-width: 1px;
+		border-color: #000000;
+		width: 20%;
+		height: 12%;
+		border-style: solid;
+}
+img {
+	width: 100%;
+	height: 99%;
 }
 
-.ganzeSeite{
-	margin: 0px 0px 0px 0px;
-width: 100%;
-height: 100%
+#selektor{
+	  position: fixed;
+    top: 13%;
+   border: 1px solid #000000; 
+   height: 85%;
+   width: 20%;
 }
-.logo{
- 	margin: 0px 0px 0px 0px;
-	width: 20%;
-	height: 10%;
-	border: 1px solid #000000;
-}
-.auswahl{
-	width: 20%;
-	height: 90%;
-	border: 1px solid #000000;
-	
-}
-#akronym{
-	font-size: 50px;
-	font-family: "Franklin Gothic Book";
-	text-align: center;
-	margin-top: 20px;
-	font-weight: bold;
-}
+
