--- a/site/style.css
+++ b/site/style.css
@@ -1,10 +1,10 @@
 body{ background-color: #FFFFFF;}
 
-#logo {border-width: 1px;
-		border-color: #000000;
-		width: 20%;
+#logo {		
+		width: 20.2%;
 		height: 12%;
-		border-style: solid;
+		
+		
 }
 img {
 	width: 100%;
@@ -14,8 +14,9 @@ img {
 #selektor{
 	  position: fixed;
     top: 13%;
-   border: 1px solid #000000; 
+   border: 2px solid #000000; 
    height: 85%;
-   width: 20%;
+   width: 19.8%;
+   
 }
 
