--- a/site/style.css
+++ b/site/style.css
@@ -1,22 +1,32 @@
-body{ background-color: #FFFFFF;}
+body {
+	background-color: #FFFFFF;
+}
 
-#logo {		
-		width: 20.2%;
-		height: 12%;
-		
-		
+#logo {
+	width: 20.2%;
+	height: 12%;
 }
 img {
 	width: 100%;
 	height: 99%;
 }
 
-#selektor{
-	  position: fixed;
-    top: 13%;
-   border: 2px solid #000000; 
-   height: 85%;
-   width: 19.8%;
-   
+#selektor {
+	position: fixed;
+	top: 13%;
+	border: 2px solid #000000;
+	height: 85%;
+	width: 19.8%;
 }
 
+#monat {
+	text-align: center;
+	border-style:solid;
+	border-width: 2px;
+	border-color: #000000;
+	font-family: Muli; 
+	font-size: 40px;
+}
+#monat:hover{
+	background-color: green;
+}
