--- a/site/style.css
+++ b/site/style.css
@@ -26,7 +26,37 @@ img {
 	border-color: #000000;
 	font-family: Muli; 
 	font-size: 40px;
+	-moz-user-select: none;
+	cursor: default;
 }
 #monat:hover{
-	background-color: green;
+	background-color: #E9E9E9;
+}
+#wochen {
+	text-align: center;
+	border-style:solid;
+	border-width: 2px;
+	border-color: #000000;
+	font-family: Muli; 
+	font-size: 40px;
+	-moz-user-select: none;
+	cursor: default;
+}
+#wochen:hover{
+	background-color: #E9E9E9;
+}
+
+#uebersicht{
+	text-align: center;
+	border-style:solid;
+	border-width: 2px;
+	border-color: #000000;
+	font-family: Muli; 
+	font-size: 40px;
+	-moz-user-select: none;
+	cursor: default;
+	height: 20%;
+}
+#uebersicht:hover{
+	background-color: #E9E9E9;
 }
