--- a/site/style.css
+++ b/site/style.css
@@ -29,9 +29,9 @@ img {
 	-moz-user-select: none;
 	cursor: default;
 }
-#monat:hover{
+/*#monat:hover{
 	background-color: #E9E9E9;
-}
+}*/
 #wochen {
 	text-align: center;
 	border-style:solid;
@@ -42,10 +42,10 @@ img {
 	-moz-user-select: none;
 	cursor: default;
 }
-#wochen:hover{
+/*#wochen:hover{
 	background-color: #E9E9E9;
+}*/
 
-}
 
 #uebersicht{
 	text-align: center;
@@ -59,6 +59,16 @@ img {
 	height: 20%;
 	border-bottom-width: 4px;
 }
-#uebersicht:hover{
+/*#uebersicht:hover{
 	background-color: #E9E9E9;
+}*/
+#ansichtsContainer{
+	border: 2px solid #000000;
+	;
+	margin-left:20.2%;
+	right:auto;
+	margin-top:0.1%;
+	width: 60%;
+	height:86.9%;
+	
 }
