--- a/site/style.css
+++ b/site/style.css
@@ -63,12 +63,13 @@ img {
 	background-color: #E9E9E9;
 }*/
 #ansichtsContainer{
-	border: 2px solid #000000;
+	border: 4px solid #000000;
 	;
 	margin-left:20.2%;
 	right:auto;
 	margin-top:0.1%;
 	width: 60%;
-	height:86.9%;
-	
+	height:86.6%;
+	border-left-width: 0px;
+	border-bottom-width: 2px;	
 }
