--- a/site/style.css
+++ b/site/style.css
@@ -65,7 +65,7 @@ img {
 #ansichtsContainer{
 	text-align:center;
 	border: 4px solid #000000;
-	
+	font-family:"Gentium Basic";
 	margin-left:20.2%;
 	
 	margin-top:0.1%;
@@ -73,4 +73,10 @@ img {
 	height:86.4%;
 	border-left-width: 0px;
 	border-bottom-width: 2px;	
+}
+table,th,td{
+	font-family: Arial, Helvetica, sans-serif;
+	text-align:center;
+	font-size: 30px;
+	border: 1px solid grey;
 }
