--- a/site/style.css
+++ b/site/style.css
@@ -58,14 +58,11 @@ img {
 #ansichtsContainer{
 	text-align:center;
 	border: 2px solid #000000;
-	font-family:"Gentium Basic";
-	margin-left:20.2%;
-	
-	margin-top:0.1%;
+	font-family:"Gentium Basic";	
 	width: 60%;
 	height:86.4%;
-	border-left-width: 0px;
-	border-bottom-width: 2px;	
+	margin:auto;
+	text-align: center;	
 }
 table,th,td{
 	font-family: Arial, Helvetica, sans-serif;
@@ -73,6 +70,9 @@ table,th,td{
 	font-size: 30px;
 	border: 1px solid grey;
 	-moz-user-select:none;
+	user-select: none; 
+    -khtml-user-select: none; 
+  
 }
 
 //Javascript Klassen
