--- a/site/style.css
+++ b/site/style.css
@@ -1,5 +1,8 @@
 body {
 	background-color: #FFFFFF;
+	-moz-user-select:none;
+	user-select: none; 
+    -khtml-user-select: none; 
 }
 
 #logo {
@@ -38,9 +41,7 @@ img {
 	-moz-user-select: none;
 	cursor: default;
 }
-/*#wochen:hover{
-	background-color: #E9E9E9;
-}*/
+
 
 
 #uebersicht{
@@ -57,23 +58,24 @@ img {
 }*/
 #ansichtsContainer{
 	text-align:center;
+	font-size: 30px;
 	border: 2px solid #000000;
-	font-family:"Gentium Basic";	
+		font-family: Arial, Helvetica, sans-serif;		
 	width: 60%;
 	height:86.4%;
 	margin:auto;
 	text-align: center;	
 }
-table,th,td{
-	font-family: Arial, Helvetica, sans-serif;
-	text-align:center;
-	font-size: 30px;
-	border: 1px solid grey;
+
+table,th,td{	
+	font-size: 30px;	
 	-moz-user-select:none;
 	user-select: none; 
     -khtml-user-select: none; 
-  
+	text-align: center;  
 }
+
+
 
 //Javascript Klassen
 .selektor_normal{
