--- a/site/style.css
+++ b/site/style.css
@@ -5,6 +5,16 @@ body {
     -khtml-user-select: none; 
 }
 
+#suchfeld{
+	position: absolute;
+	top:10px;
+	right: 70px;
+	width: 100px;
+	height: 22px;
+	font-size: 20px;
+	font-family: Muli;
+}
+
 #logo {
 	width: 200px;
 	height: 58px;
