--- a/site/style.css
+++ b/site/style.css
@@ -5,7 +5,7 @@ body {
     -khtml-user-select: none; 
 }
 #tfheader{
-		background-color:#c3dfef;
+		background-color:#FFFFFF;
 	}
 	#tfnewsearch{
 		float:right;
@@ -16,7 +16,7 @@ body {
 		padding: 5px 15px;
 		font-family: Arial, Helvetica, sans-serif;
 		font-size:14px;
-		border:1px solid #0076a3; border-right:0px;
+		border:1px solid black; border-right:0px;
 		border-top-left-radius: 5px 5px;
 		border-bottom-left-radius: 5px 5px;
 	}
