--- a/site/style.css
+++ b/site/style.css
@@ -1,149 +1,120 @@
 body {
-	background-color: #FFFFFF;
-	-moz-user-select:none;
-	user-select: none; 
+    background-color: #FFFFFF;
+    -moz-user-select:none;
+    user-select: none; 
     -khtml-user-select: none; 
-    
 }
+
 #tfheader{
-		background-color:#FFFFFF;
-	}
-	#tfnewsearch{
-		float:right;
-		padding:20px;
-	}
-	.tftextinput{
-		margin: 0;
-		padding: 5px 15px;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size:14px;
-		border:1px solid black; border-right:0px;
-		border-top-left-radius: 5px 5px;
-		border-bottom-left-radius: 5px 5px;
-	}
-	.tfbutton {
-		margin: 0;
-		padding: 5px 15px;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size:14px;
-		outline: none;
-		cursor: pointer;
-		text-align: center;
-		text-decoration: none;
-		color: #ffffff;
-		border: solid 1px #0076a3; border-right:0px;
-		background: #0095cd;
-		background: -webkit-gradient(linear, left top, left bottom, from(#00adee), to(#0078a5));
-		background: -moz-linear-gradient(top,  #00adee,  #0078a5);
-		border-top-right-radius: 5px 5px;
-		border-bottom-right-radius: 5px 5px;
-	}
-	.tfbutton:hover {
-		text-decoration: none;
-		background: #007ead;
-		background: -webkit-gradient(linear, left top, left bottom, from(#0095cc), to(#00678e));
-		background: -moz-linear-gradient(top,  #0095cc,  #00678e);
-	}
-	/* Fixes submit button height problem in Firefox */
-	.tfbutton::-moz-focus-inner {
-	  border: 0;
-	}
-	.tfclear{
-		clear:both;
-	}
+    background-color:#FFFFFF;
+}
+
+#tfnewsearch{
+    float:right;
+    padding:20px;
+}
+
+.tftextinput{
+    margin: 0;
+    padding: 5px 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:14px;
+    border:1px solid black; border-right:0px;
+    border-top-left-radius: 5px 5px;
+    border-bottom-left-radius: 5px 5px;
+}
+
+.tfbutton {
+    margin: 0;
+    padding: 5px 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:14px;
+    outline: none;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    color: #ffffff;
+    border: solid 1px #0076a3; border-right:0px;
+    background: #0095cd;
+    background: -webkit-gradient(linear, left top, left bottom, from(#00adee), to(#0078a5));
+    background: -moz-linear-gradient(top,  #00adee,  #0078a5);
+    border-top-right-radius: 5px 5px;
+    border-bottom-right-radius: 5px 5px;
+}
+
+.tfbutton:hover {
+    text-decoration: none;
+    background: #007ead;
+    background: -webkit-gradient(linear, left top, left bottom, from(#0095cc), to(#00678e));
+    background: -moz-linear-gradient(top,  #0095cc,  #00678e);
+}
+
+/* Fixes submit button height problem in Firefox */
+.tfbutton::-moz-focus-inner {
+    border: 0;
+}
+
+.tfclear{
+    clear:both;
+}
+
 #suchfeld{
-	position: absolute;
-	top:10px;
-	right: 70px;
-	width: 100px;
-	height: 22px;
-	font-size: 20px;
-	font-family: Muli;
+    position: absolute;
+    top:10px;
+    right: 70px;
+    width: 100px;
+    height: 22px;
+    font-size: 20px;
+    font-family: Muli;
 }
 
 #logo {
-	width: 200px;
-	height: 58px;
-	margin-bottom:5px;
+    width: 200px;
+    height: 58px;
+    margin-bottom:5px;
 }
+
 img {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 #selektor {
-	float:left;	
-	border: 2px solid #000000;
-	height: 85%;
-	width: 19.8%;
+    float:left;	
+    border: 2px solid #000000;
+    height: 85%;
+    width: 19.8%;
 }
 
-#monat {
-	text-align: center;
-	border: 2px solid #000000;
-	font-family: Muli; 
-	font-size: 40px;
-	-moz-user-select: none;
-	cursor: default;
-}
-/*#monat:hover{
-	background-color: #E9E9E9;
-}*/
-#wochen {
-	text-align: center;
-	border: 2px solid #000000;
-	font-family: Muli; 
-	font-size: 40px;
-	-moz-user-select: none;
-	cursor: default;
-}
-
-
-
-#uebersicht{
-	text-align: center;
-	border: 2px solid #000000;
-	font-family: Muli; 
-	font-size: 40px;
-	-moz-user-select: none;
-	cursor: default;
-	border-bottom-width: 4px;
-}
-/*#uebersicht:hover{
-	background-color: #E9E9E9;
-}*/
 #ansichtsContainer{
-	text-align:center;
-	font-size: 30px;
-	border: 2px solid #000000;
-		font-family: Arial, Helvetica, sans-serif;		
-	width: 60%;
-	height:86.4%;
-	margin:auto;
-	text-align: center;
-	cursor:default;	
+    text-align:center;
+    font-size: 30px;
+    border: 2px solid #000000;
+    font-family: Arial, Helvetica, sans-serif;		
+    width: 60%;
+    height:86.4%;
+    margin:auto;
+    text-align: center;	
 }
 
 table,th,td{	
-	font-size: 30px;	
-	-moz-user-select:none;
-	user-select: none; 
+    font-size: 30px;	
+    -moz-user-select:none;
+    user-select: none; 
     -khtml-user-select: none; 
-	text-align: center;
-	cursor: default;  
+    text-align: center;  
 }
 
-
-
-//Javascript Klassen
-.selektor_normal{
- background-color : #FFFFFF;
+#ohneEvent{
+    background-color : yellow;
 }
 
-.selektor_choosen{
- background-color :#BABABA;
+#mitEvent{
+    background-color: red;
+    font-style: oblique;
 }
 
-.selektor_hoover{
- background-color : E9E9E9;
+#nichtimMonat{
+    background-color: grey;
 }
+
