--- a/site/style.css
+++ b/site/style.css
@@ -19,7 +19,7 @@ body {
     padding: 5px 15px;
     font-family: Arial, Helvetica, sans-serif;
     font-size:14px;
-    border:1px solid black; border-right:0px;
+    border:1px solid black;
     border-top-left-radius: 5px 5px;
     border-bottom-left-radius: 5px 5px;
 }
@@ -118,3 +118,23 @@ table,th,td{
     background-color: grey;
 }
 
+#monate{
+    width: 100%;
+    height:  100%;
+}
+
+.blink {
+    animation-duration: 1s;
+    animation-name: blink;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
+}
+@keyframes blink {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
