--- a/site/style.css
+++ b/site/style.css
@@ -1,140 +1,141 @@
 body {
-    background-color: #FFFFFF;
-    -moz-user-select:none;
-    user-select: none; 
-    -khtml-user-select: none; 
+	background-color: #FFFFFF;
+	-moz-user-select: none;
+	user-select: none;
+	-khtml-user-select: none;
 }
 
-#tfheader{
-    background-color:#FFFFFF;
+#tfheader {
+	background-color: #FFFFFF;
 }
 
-#tfnewsearch{
-    float:right;
-    padding:20px;
+#tfnewsearch {
+	float: right;
+	padding: 20px;
 }
 
-.tftextinput{
-    margin: 0;
-    padding: 5px 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size:14px;
-    border:1px solid black;
-    border-top-left-radius: 5px 5px;
-    border-bottom-left-radius: 5px 5px;
+.tftextinput {
+	margin: 0;
+	padding: 5px 15px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	border: 1px solid black;
+	border-top-left-radius: 5px 5px;
+	border-bottom-left-radius: 5px 5px;
 }
 
 .tfbutton {
-    margin: 0;
-    padding: 5px 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size:14px;
-    outline: none;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    color: #ffffff;
-    border: solid 1px #0076a3; border-right:0px;
-    background: #0095cd;
-    background: -webkit-gradient(linear, left top, left bottom, from(#00adee), to(#0078a5));
-    background: -moz-linear-gradient(top,  #00adee,  #0078a5);
-    border-top-right-radius: 5px 5px;
-    border-bottom-right-radius: 5px 5px;
+	margin: 0;
+	padding: 5px 15px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	outline: none;
+	cursor: pointer;
+	text-align: center;
+	text-decoration: none;
+	color: #ffffff;
+	border: solid 1px #0076a3;
+	border-right: 0px;
+	background: #0095cd;
+	background: -webkit-gradient(linear, left top, left bottom, from(#00adee), to(#0078a5));
+	background: -moz-linear-gradient(top,  #00adee,  #0078a5);
+	border-top-right-radius: 5px 5px;
+	border-bottom-right-radius: 5px 5px;
 }
 
 .tfbutton:hover {
-    text-decoration: none;
-    background: #007ead;
-    background: -webkit-gradient(linear, left top, left bottom, from(#0095cc), to(#00678e));
-    background: -moz-linear-gradient(top,  #0095cc,  #00678e);
+	text-decoration: none;
+	background: #007ead;
+	background: -webkit-gradient(linear, left top, left bottom, from(#0095cc), to(#00678e));
+	background: -moz-linear-gradient(top,  #0095cc,  #00678e);
 }
 
 /* Fixes submit button height problem in Firefox */
 .tfbutton::-moz-focus-inner {
-    border: 0;
+	border: 0;
 }
 
-.tfclear{
-    clear:both;
+.tfclear {
+	clear: both;
 }
 
-#suchfeld{
-    position: absolute;
-    top:10px;
-    right: 70px;
-    width: 100px;
-    height: 22px;
-    font-size: 20px;
-    font-family: Muli;
+#suchfeld {
+	position: absolute;
+	top: 10px;
+	right: 70px;
+	width: 100px;
+	height: 22px;
+	font-size: 20px;
+	font-family: Muli;
 }
 
 #logo {
-    width: 200px;
-    height: 58px;
-    margin-bottom:5px;
+	width: 200px;
+	height: 58px;
+	margin-bottom: 5px;
 }
 
 img {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 #selektor {
-    float:left;	
-    border: 2px solid #000000;
-    height: 85%;
-    width: 19.8%;
+	float: left;
+	border: 2px solid #000000;
+	height: 85%;
+	width: 19.8%;
 }
 
-#ansichtsContainer{
-    text-align:center;
-    font-size: 30px;
-    border: 2px solid #000000;
-    font-family: Arial, Helvetica, sans-serif;		
-    width: 60%;
-    height:86.4%;
-    margin:auto;
-    text-align: center;	
+#ansichtsContainer {
+	text-align: center;
+	font-size: 30px;
+	border: 2px solid #000000;
+	font-family: Arial, Helvetica, sans-serif;
+	width: 60%;
+	height: 86.4%;
+	margin: auto;
+	text-align: center;
 }
 
-table,th,td{	
-    font-size: 30px;	
-    -moz-user-select:none;
-    user-select: none; 
-    -khtml-user-select: none; 
-    text-align: center;  
+table, th, td {
+	font-size: 30px;
+	-moz-user-select: none;
+	user-select: none;
+	-khtml-user-select: none;
+	text-align: center;
 }
 
-#ohneEvent{
-    background-color : yellow;
+#ohneEvent {
+	background-color: yellow;
 }
 
-#mitEvent{
-    background-color: red;
-    font-style: oblique;
+#mitEvent {
+	background-color: red;
+	font-style: oblique;
 }
 
-#nichtimMonat{
-    background-color: grey;
+#nichtimMonat {
+	background-color: grey;
 }
 
-#monate{
-    width: 100%;
-    height:  100%;
+#monate {
+	width: 100%;
+	height: 100%;
 }
 
 .blink {
-    animation-duration: 1s;
-    animation-name: blink;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: ease-in-out;
+	animation-duration: 1s;
+	animation-name: blink;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+	animation-timing-function: ease-in-out;
 }
 @keyframes blink {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-    }
+from {
+	opacity: 1;
+}
+to {
+	opacity: 0;
+}
 }
