--- a/site/style.css
+++ b/site/style.css
@@ -1,3 +1,11 @@
+#haupt{
+	width:60%;
+	height:160px;
+	
+	margin:auto;
+	margin-bottom: 3px;
+	}
+
 body {
     background-color: #FFFFFF;
     -moz-user-select:none;
@@ -7,12 +15,19 @@ body {
 
 #tfheader{
     background-color:#FFFFFF;
+
 }
 
 #tfnewsearch{
     float:right;
     padding:20px;
 }
+
+#search{
+	position:relativ;
+	top: 0px;
+	right:0px;
+	}
 
 .tftextinput{
     margin: 0;
@@ -58,20 +73,12 @@ body {
     clear:both;
 }
 
-#suchfeld{
-    position: absolute;
-    top:10px;
-    right: 70px;
-    width: 100px;
-    height: 22px;
-    font-size: 20px;
-    font-family: Muli;
-}
-
 #logo {
+	position: realtiv;
+	left: 0px;
+	top: 0px;
     width: 300px;
     height: 87px;
-    margin-bottom:5px;
 }
 
 img {
@@ -94,7 +101,7 @@ img {
     width: 60%;
     height:86.4%;
     margin:auto;
-    text-align: center;	
+  
 }
 
 table,th,td{	
