--- a/style.css
+++ b/style.css
@@ -116,9 +116,10 @@ table, th, td {
 }
 
 #mitEvent {
-    background-color: red;
+   background-color: red; 
     font-style: oblique;
-    cursor: progress;
+    cursor: pointer;
+    
      
 }
 
