--- a/style.css
+++ b/style.css
@@ -1,216 +1,211 @@
 #haupt {
-    width: 60%;
-    height: 150px;
-    margin: auto;
-    margin-bottom: 3px;
+	width: 60%;
+	height: 150px;
+	margin: auto;
+	margin-bottom: 3px;
 }
 
 body {
-    background-color: #FFFFFF;
-    -moz-user-select: none;
-    user-select: none;
-    -khtml-user-select: none;
-    background: white;
+	background-color: #FFFFFF;
+	-moz-user-select: none;
+	user-select: none;
+	-khtml-user-select: none;
+	background: white;
 }
 
 #tfheader {
-    background-color: #FFFFFF;
+	background-color: #FFFFFF;
 }
 
 #tfnewsearch {
-    float: right;
-    padding: 20px;
+	float: right;
+	padding: 20px;
 }
 
 #search {
-    float: right;
-    top: 0px;
-    right: 0px;
+	float: right;
+	top: 0px;
+	right: 0px;
 }
 
 .tftextinput {
-    margin: 0;
-    padding: 5px 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    border: 1px solid black;
-    border-top-left-radius: 5px 5px;
-    border-bottom-left-radius: 5px 5px;
+	margin: 0;
+	padding: 5px 15px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	border: 1px solid black;
+	border-top-left-radius: 5px 5px;
+	border-bottom-left-radius: 5px 5px;
 }
 
 .tfbutton {
-    margin: 0;
-    padding: 5px 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    outline: none;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    color: #ffffff;
-    border: solid 1px #555555;
-    background: #0095cd;
-    background: -webkit-gradient(linear, left top, left bottom, from(#d2d4dc), to(#777777));
-    background: -moz-linear-gradient(top,  #d2d4dc,  #777777);
-    border-top-right-radius: 5px 5px;
-    border-bottom-right-radius: 5px 5px;
+	margin: 0;
+	padding: 5px 15px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	outline: none;
+	cursor: pointer;
+	text-align: center;
+	text-decoration: none;
+	color: #ffffff;
+	border: solid 1px #555555;
+	background: #0095cd;
+	background: -webkit-gradient(linear, left top, left bottom, from(#d2d4dc), to(#777777));
+	background: -moz-linear-gradient(top,  #d2d4dc,  #777777);
+	border-top-right-radius: 5px 5px;
+	border-bottom-right-radius: 5px 5px;
 }
 
 .tfbutton:hover {
-    text-decoration: none;
-    background: #333333;
-    background: -webkit-gradient(linear, left top, left bottom, from(#999999), to(#333333));
-    background: -moz-linear-gradient(top,  #999999,  #333333);
+	text-decoration: none;
+	background: #333333;
+	background: -webkit-gradient(linear, left top, left bottom, from(#999999), to(#333333));
+	background: -moz-linear-gradient(top,  #999999,  #333333);
 }
 
 /* Fixes submit button height problem in Firefox */
 .tfbutton::-moz-focus-inner {
-    border: 0;
+	border: 0;
 }
 
 .tfclear {
-    clear: both;
+	clear: both;
 }
 
 #logo {
-    float: left;
-    left: 0px;
-    top: 0px;
-    width: 300px;
-    height: 87px;
+	float: left;
+	left: 0px;
+	top: 0px;
+	width: 300px;
+	height: 87px;
 }
 
 img {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 #selektor {
-    float: left;
-    border: 2px solid #000000;
-    height: 85%;
-    width: 19.8%;
+	float: left;
+	border: 2px solid #000000;
+	height: 85%;
+	width: 19.8%;
 }
 
 #ansichtsContainer {
-    text-align: center;
-    font-size: 30px;
-    border: 2px solid #000000;
-    font-family: Arial, Helvetica, sans-serif;
-    width: 60%;
-    height: 86.4%;
-    margin: auto;
+	text-align: center;
+	font-size: 30px;
+	border: 2px solid #000000;
+	font-family: Arial, Helvetica, sans-serif;
+	width: 60%;
+	height: 86.4%;
+	margin: auto;
 }
 
 table, th, td {
-    font-size: 30px;
-    -moz-user-select: none;
-    user-select: none;
-    -khtml-user-select: none;
-    text-align: center;
-    cursor: default;
+	font-size: 30px;
+	-moz-user-select: none;
+	user-select: none;
+	-khtml-user-select: none;
+	text-align: center;
+	cursor: default;
 }
 
 #ohneEvent {
-    background-color: yellow;
+	background-color: yellow;
 }
 
 #mitEvent {
-   background-color: red; 
-    font-style: oblique;
-    cursor: pointer;
-    
-     
+	/*background-color: red; */
+	font-style: oblique;
+	cursor: pointer;
+	color: red;
 }
 
 #nichtimMonat {
-    background-color: #A5BEBE;
+	/*background-color: #A5BEBE;*/
+	color: #A5BEBE;
 }
 
 #monate {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 .blink {
-    animation-duration: 1s;
-    animation-name: blink;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: ease-in-out;
+	animation-duration: 1s;
+	animation-name: blink;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+	animation-timing-function: ease-in-out;
 }
 @keyframes blink {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-    }
+from {
+	opacity: 1;
+}
+to {
+	opacity: 0;
+}
 }
 
 .hinundher {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 #monatsanzeige {
-    cursor: default;
+	cursor: default;
 }
 #reiter {
 
-    float: left;
-    align: center;
-    width: 100%;
+	float: left;
+	align: center;
+	width: 100%;
 }
 
 ul#Navigation {
-    margin: 0;
-    padding: 0.8em;
-    text-align: center;
-    /* border: 1px solid black;*/
-    background-color: white;
+	margin: 0;
+	padding: 0.8em;
+	text-align: center;
+	/* border: 1px solid black;*/
+	background-color: white;
 }
 ul#Navigation li {
-    list-style: none;
-    display: inline;
-    margin: 0.4em;
-    padding: 0;
+	list-style: none;
+	display: inline;
+	margin: 0.4em;
+	padding: 0;
 }
 
 ul#Navigation a, ul#Navigation span {
-    padding: 0.2em 1em;
-    text-decoration: none;
-    font-weight: bold;
-    border: 1px solid black;
-    border-radius: 10px;
-    color: black;
-    background-color: #ccc;
+	padding: 0.2em 1em;
+	text-decoration: none;
+	font-weight: bold;
+	border: 1px solid black;
+	border-radius: 10px;
+	color: black;
+	background-color: #ccc;
 }
 ul#Navigation a:hover, ul#Navigation span {
-    border-color: white;
-    color: white;
-    background-color: #afafaf;
+	border-color: white;
+	color: white;
+	background-color: #afafaf;
 }
 
-
-
-
 .ModularesView {
-    /* some styles to position the modal at the center of the page */
-    position: fixed;
-    top: 30%;
-    left: 50%;
-    width: 800px;
-    height: 400px;
-    margin-left: -400px;
-    margin-top: -200px;
-    background-color: white;
-    text-align: center;
-    border-radius: 5px;
-    visibility: hidden;
-
-
-    /* needed styles for the overlay */
-    z-index: 10; /* keep on top of other elements on the page */
-    box-shadow: 0 0 0 9999px rgba(0,0,0,0.5);
+	/* some styles to position the modal at the center of the page */
+	position: fixed;
+	top: 30%;
+	left: 50%;
+	width: 800px;
+	height: 400px;
+	margin-left: -400px;
+	margin-top: -200px;
+	background-color: white;
+	text-align: center;
+	border-radius: 5px;
+	visibility: hidden;
+	/* needed styles for the overlay */
+	z-index: 10; /* keep on top of other elements on the page */
+	box-shadow: 0 0 0 9999px rgba(0,0,0,0.5);
 }
 
